@@ -285,6 +285,11 @@ void IntegrationPluginGoECharger::thingRemoved(Thing *thing)
         m_refreshTimer = nullptr;
     }
 
+    // Clean up no reply counter
+    if (m_noReplyCounter.contains(thing))
+        m_noReplyCounter.remove(thing);
+
+
     // Clean up lists for outlier checking
     if (m_sessionEnergyValues.contains(thing))
         m_sessionEnergyValues.remove(thing);
@@ -466,7 +471,7 @@ void IntegrationPluginGoECharger::setupGoeHome(ThingSetupInfo *info)
                 info->finish(Thing::ThingErrorNoError);
 
                 qCDebug(dcGoECharger()) << "Setup using HTTP finished successfully";
-                thing->setStateValue("connected", true);
+                markAsConnected(thing);
                 updateV1(thing, statusMap);
             }
             break;
@@ -490,7 +495,7 @@ void IntegrationPluginGoECharger::setupGoeHome(ThingSetupInfo *info)
                 info->finish(Thing::ThingErrorNoError);
 
                 qCDebug(dcGoECharger()) << "Setup using HTTP finished successfully";
-                thing->setStateValue("connected", true);
+                markAsConnected(thing);
                 updateV2(thing, statusMap);
             }
             break;
@@ -1599,7 +1604,7 @@ void IntegrationPluginGoECharger::refreshHttp()
 
             ApiVersion apiVersion = getApiVersion(thing);
             // Valid json data received, connected true
-            thing->setStateValue("connected", true);
+            markAsConnected(thing);
 
             //qCDebug(dcGoECharger()) << "Received" << qUtf8Printable(jsonDoc.toJson());
             QVariantMap statusMap = jsonDoc.toVariant().toMap();
@@ -1624,8 +1629,7 @@ void IntegrationPluginGoECharger::onMqttClientV1Connected(MqttChannel *channel)
         return;
     }
 
-    qCDebug(dcGoECharger()) << thing << "connected";
-    thing->setStateValue("connected", true);
+    markAsConnected(thing);
 }
 
 void IntegrationPluginGoECharger::onMqttClientV1Disconnected(MqttChannel *channel)
@@ -1636,7 +1640,6 @@ void IntegrationPluginGoECharger::onMqttClientV1Disconnected(MqttChannel *channe
         return;
     }
 
-    qCDebug(dcGoECharger()) << thing << "connected";
     markAsDisconnected(thing);
 }
 
@@ -1672,8 +1675,7 @@ void IntegrationPluginGoECharger::onMqttClientV2Connected(MqttChannel *channel)
         return;
     }
 
-    qCDebug(dcGoECharger()) << thing << "connected";
-    thing->setStateValue("connected", true);
+    markAsConnected(thing);
 }
 
 void IntegrationPluginGoECharger::onMqttClientV2Disconnected(MqttChannel *channel)
@@ -1684,25 +1686,47 @@ void IntegrationPluginGoECharger::onMqttClientV2Disconnected(MqttChannel *channe
         return;
     }
 
-    qCDebug(dcGoECharger()) << thing << "connected";
     markAsDisconnected(thing);
 }
 
 void IntegrationPluginGoECharger::markAsDisconnected(Thing *thing)
 {
-    qCDebug(dcGoECharger()) << "Mark device as disconnected" << thing;
-    thing->setStateValue("connected", false);
-    thing->setStateValue("currentPower", 0);
-    thing->setStateValue("voltagePhaseA", 0);
-    thing->setStateValue("voltagePhaseB", 0);
-    thing->setStateValue("voltagePhaseC", 0);
-    thing->setStateValue("currentPhaseA", 0);
-    thing->setStateValue("currentPhaseB", 0);
-    thing->setStateValue("currentPhaseC", 0);
-    thing->setStateValue("currentPowerPhaseA", 0);
-    thing->setStateValue("currentPowerPhaseB", 0);
-    thing->setStateValue("currentPowerPhaseC", 0);
-    thing->setStateValue("frequency", 0);
+    if (m_noReplyCounter.contains(thing)) {
+        uint counter = m_noReplyCounter.value(thing);
+        if (counter > NO_REPLY_MAX) {
+            if (thing->stateValue("connected").toBool()) {
+                qCDebug(dcGoECharger()) << "Device" << thing << "failed to communicate counter:" << (counter + 1);
+                qCDebug(dcGoECharger()) << "Mark device as disconnected" << thing;
+                thing->setStateValue("connected", false);
+                thing->setStateValue("currentPower", 0);
+                thing->setStateValue("voltagePhaseA", 0);
+                thing->setStateValue("voltagePhaseB", 0);
+                thing->setStateValue("voltagePhaseC", 0);
+                thing->setStateValue("currentPhaseA", 0);
+                thing->setStateValue("currentPhaseB", 0);
+                thing->setStateValue("currentPhaseC", 0);
+                thing->setStateValue("currentPowerPhaseA", 0);
+                thing->setStateValue("currentPowerPhaseB", 0);
+                thing->setStateValue("currentPowerPhaseC", 0);
+                thing->setStateValue("frequency", 0);
+            }
+        } else {
+            counter++;
+            qCDebug(dcGoECharger()) << "Device" << thing << "failed to communicate counter:" << counter;
+        }
+    } else {
+        m_noReplyCounter.insert(thing, 1);
+        qCDebug(dcGoECharger()) << "Device" << thing << "failed to communicate counter: 1";
+    }
+}
+
+void IntegrationPluginGoECharger::markAsConnected(Thing *thing)
+{
+    m_noReplyCounter.insert(thing, 0);
+    if (!thing->stateValue("connected").toBool()) {
+        qCDebug(dcGoECharger()) << thing << "connected";
+        thing->setStateValue("connected", true);
+    }
 }
 
 // This method uses the Hampel identifier (https://blogs.sas.com/content/iml/2021/06/01/hampel-filter-robust-outliers.html) to test if the value in the center of the window is an outlier or not.
